<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">VoluTime</string>
    <string name="customize">Customize</string>
    <string name="show_dialog">Show Dialog</string>
    <string name="undo">Undo</string>
    <string name="title_activity_login">Sign in</string>

    <!-- login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_user_exist">User doesn\'t exist</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_org">Organization</string>
    <string name="nav_calendar">Calendar</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_messages">Messages</string>
<!--    <string name="nav_settings">Settings</string>-->
<!--    <string name="nav_about_us">About Us</string>-->

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Organization</item>
        <item>Calendar</item>
        <item>Messages</item>
        <item>Profile</item>
        <!--<item>Settings</item>-->
    </string-array>

    <!-- Activities titles -->
    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>

    <!-- recyclerview -->
    <string name="item_clicked">"you have clicked on : %1$s"</string>
    <string name="hello_blank_fragment">Hello blank Fragment</string>

    <!-- test values -->
     <string name="detail_desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
        eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
        nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
        irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
        pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
        deserunt mollit anim id est laborum.
    </string>
    <string name="detail_location">"8 Rue Scribe, 75009 Paris, France"</string>
    <string name="item_title">Palais Garnier</string>

    <!-- Calendar -->
    <string name="DateStringFormat">dd MM yyyy</string>
    <string name="LongDateStringFormat">yyyy-MM-dd HH:mm:ss</string>
    <string name="dialog_fragment_tag">CALDROID_DIALOG_FRAGMENT</string>
    <string name="dialog_caldroid_saved_state">DIALOG_CALDROID_SAVED_STATE</string>
    <string name="event_start">start time</string>
    <string name="event_end">end time</string>
    <string name="btnEdit">Edit</string>
    <string name="btnRemove">Remove</string>
    <string name="btnSave">Save</string>
    <string name="btnCancel">Cancel</string>

    <!-- Event -->
    <string name="dayEventTitle">Events for date:</string>
    <string name="select_organization">Select organization</string>
    <string name="select_date">SELECT DATE</string>
    <string name="select_time">SELECT TIME</string>
    <string name="start_date">start date</string>
    <string name="start_time">start time</string>
    <string name="end_date">end date</string>
    <string name="end_time">end time</string>
    <string name="checkDates">Invalid Dates , check date and time</string>

    <string name="checkDatesOnly">Start date should be earlier then end date, Check again!</string>
    <string name="select_start">Choose start date</string>
    <string name="select_end">Choose end date</string>
    <string name="errorOnSave">There was an error on save, please try again</string>
    <string name="successOnSave">Changes saved successfully</string>
    <string name="errorOnDelete">There was an error on remove, please try again</string>
    <string name="successOnDelete">Remove was successfully</string>
    <string name="add_new_event">New Event</string>

    <string name="alertPopMsg">Are you sure you want to delete?</string>
    <string name="alertPopTitle">Delete</string>
    <string name="alertLblPositive">Delete</string>
    <string name="alertLblNegative">Cancel</string>
    <string name="zone">Israel</string>
    <string name="no_orgs_for_user">Please add organization to you profile before continuing.</string>
    <string name="no_orgs_in_sys">There are  no organization in the system.</string>
    <string name="no_events">No events for this day</string>
    <string name="notify_Title">New Notification</string>
    <string name="notify_Text">You have new event coming up</string>

    <string name="org_profile">org_profile</string>
    <string name="show_org">Show details</string>
    <string name="welcome">welcome</string>

    <string name="preUpdate">Updating : %1$s</string>
    <string name="postUpdate">Finished updating : %1$s</string>
    <string name="updateMsg">Please wait…</string>

    <string name="orgs">Organizations</string>
    <string name="vols">Volunteers</string>
    <string name="events">Events</string>
    <string name="message">Messages</string>

</resources>