<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_org"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_org" />
        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/ic_date_range_black_24dp"
            android:title="@string/nav_calendar" />
        <item
            android:id="@+id/nav_messages"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/nav_messages" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_perm_contact_calendar"
            android:title="@string/nav_profile" />



     <!--   <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/nav_settings" />-->
    </group>

 <!--   <item android:title="Other">
        <menu>
            <item
                android:id="@+id/nav_about_us"
                android:title="@string/nav_about_us" />
            <item
                android:id="@+id/nav_privacy_policy"
                android:title="@string/privacy_policy" />
        </menu>
    </item>-->

</menu>