<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <TextView

            android:layout_marginTop="5dp"
            android:layout_height="wrap_content"
            android:id="@+id/orgName"
            android:text="orgName"
            android:layout_width="match_parent"
            android:hapticFeedbackEnabled="false"
            android:height="30dp"
            tools:textSize="18sp"
            android:layout_weight="0.8" />

    </LinearLayout>

    <LinearLayout

        android:layout_alignParentStart="true"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/OrgLayout"
        android:layout_marginTop="20dp"
        android:weightSum="1">

        <TextView

            android:layout_marginTop="5dp"
            android:layout_height="wrap_content"
            android:id="@+id/lblOrg"
            android:text="@string/select_organization"
            android:layout_width="229dp"
            android:hapticFeedbackEnabled="false"
            android:height="30dp"
            tools:textSize="18sp" />

        <Spinner
            android:layout_width="234dp"
            android:layout_height="wrap_content"
            android:id="@+id/orgSpin"
            android:layout_marginTop="10dp"
            />

    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">
        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/in_date_s"
            android:layout_marginTop="5dp"
            android:enabled="false"
            android:hint="@string/select_start"
            android:layout_weight="0.80" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_date"
            android:id="@+id/btn_date_s"
            />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">
        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/in_date_e"
            android:layout_marginTop="5dp"
            android:enabled="false"
            android:hint="@string/select_end"
            android:layout_weight="0.80" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_date"
            android:id="@+id/btn_date_e"
            />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonsLayout">

        <Button
            android:text="@string/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnSaveOrg"
            android:layout_weight="1"
            android:onClick="onbtnSave_Click" />

        <Button
            android:text="@string/btnRemove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnRemove"
            android:layout_weight="1"
            />

    </LinearLayout>

</LinearLayout>
